Navbar: fixing Brigade title wrapping when scrolling down #180

--- a/themes/atl/public/css/main.scss
+++ b/themes/atl/public/css/main.scss
@@ -194,14 +194,12 @@ nav.navbar {
       width: auto;
       height: 60%;
       &.brigade-logo {
-        float: left;
 
         height: 100%;
       }
     }
     span {
       display: inline-block;
-      float: left;
 
       height: 100%;
       margin-left: 10px;
